--- a/.htaccess
+++ b/.htaccess
@@ -1,15 +1,3 @@
-<!-- <IfModule mod_rewrite.c>
-    RewriteEngine On
-    RewriteBase /
-    RewriteRule ^$ views/index.html [L]
-</IfModule> -->
-<!-- 
-<IfModule mod_rewrite.c>
-    RewriteEngine On
-    RewriteBase /
-    
-    RewriteRule ^accueil$ index.html [L]
-    RewriteRule ^cv$ cv.html [L]
-    RewriteRule ^projets$ projets.html [L]
-    RewriteRule ^loisirs$ loisirs.html [L]
-</IfModule> -->
+RewriteEngine On
+RewriteCond %{SERVER_PORT} 80
+RewriteRule ^(.*)$ https://www.bk-dev.fr/$1 [R,L]
